--- a/src/gui/Aanmelden.fxml
+++ b/src/gui/Aanmelden.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
 <fx:root type="StackPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="602.0" fitWidth="614.0" pickOnBounds="true" preserveRatio="true">
@@ -35,14 +34,14 @@
                   <RowConstraints vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Label fx:id="lblGebruikersnaam" text="Gebruikersnaam" textFill="WHITE">
+                  <Label fx:id="lblGebruikersnaam" textFill="WHITE">
                      <font>
                         <Font name="RomanC" size="19.0" />
                      </font>
                   </Label>
                   <TextField fx:id="txfGebruikersnaam" prefHeight="26.0" prefWidth="166.0" GridPane.columnIndex="1" />
                   <TextField fx:id="txfGeboortjaar" prefHeight="26.0" prefWidth="166.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label fx:id="lblGeboortejaar" prefHeight="26.0" prefWidth="165.0" text="Geboortejaar" textFill="WHITE" GridPane.rowIndex="1">
+                  <Label fx:id="lblGeboortejaar" prefHeight="26.0" prefWidth="165.0" textFill="WHITE" GridPane.rowIndex="1">
                      <font>
                         <Font name="RomanC" size="20.0" />
                      </font>
@@ -53,11 +52,11 @@
                <children>
                   <HBox alignment="CENTER" spacing="20.0">
                      <children>
-                        <Button fx:id="btnTerug" minWidth="100.0" mnemonicParsing="false" onAction="#btnTerugClicked" text="Terug" />
-                        <Button fx:id="btnLogIn" disable="false" minWidth="100.0" mnemonicParsing="false" onAction="#btnLogInClicked" text="Log in" />
+                        <Button fx:id="btnTerug" minWidth="100.0" mnemonicParsing="false" onAction="#btnTerugClicked" />
+                        <Button fx:id="btnLogIn" disable="false" minWidth="100.0" mnemonicParsing="false" onAction="#btnLogInClicked" />
                      </children>
                   </HBox>
-                  <Button fx:id="btnStartSpel" disable="true" minWidth="220.0" mnemonicParsing="false" onAction="#btnStartSpelClicked" text="Start spel" />
+                  <Button fx:id="btnStartSpel" disable="true" minWidth="220.0" mnemonicParsing="false" onAction="#btnStartSpelClicked" />
                </children>
             </VBox>
          </children>
