--- a/src/gui/Menu.fxml
+++ b/src/gui/Menu.fxml
@@ -41,7 +41,7 @@
             <DropShadow />
          </effect>
       </Label>
-      <Button fx:id="btnAppStoppen" focusTraversable="false" mnemonicParsing="false" onAction="#btnAppStoppenClicked" prefHeight="44.0" prefWidth="315.0" text="Applicatie stoppen" GridPane.rowIndex="5">
+      <Button fx:id="btnAppStoppen" focusTraversable="false" mnemonicParsing="false" onAction="#btnAppStoppenClicked" prefHeight="44.0" prefWidth="315.0" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
@@ -49,7 +49,7 @@
             <Font size="25.0" />
          </font>
       </Button>
-      <Button fx:id="btnSpelerAanmelden" focusTraversable="false" mnemonicParsing="false" onAction="#btnSpelerAanmeldenClicked" prefHeight="52.0" prefWidth="315.0" text="Speler aanmelden" GridPane.rowIndex="3">
+      <Button fx:id="btnSpelerAanmelden" focusTraversable="false" mnemonicParsing="false" onAction="#btnSpelerAanmeldenClicked" prefHeight="52.0" prefWidth="315.0" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
@@ -57,7 +57,7 @@
             <Font size="25.0" />
          </font>
       </Button>
-      <Button fx:id="btnOverzichtSpelers" focusTraversable="false" mnemonicParsing="false" onAction="#btnOverzichtSpelersClicked" prefHeight="52.0" prefWidth="315.0" text="Overzicht spelers" GridPane.rowIndex="4">
+      <Button fx:id="btnOverzichtSpelers" focusTraversable="false" mnemonicParsing="false" onAction="#btnOverzichtSpelersClicked" prefHeight="52.0" prefWidth="315.0" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
