--- a/src/gui/OverzichtSpelers.fxml
+++ b/src/gui/OverzichtSpelers.fxml
@@ -22,7 +22,7 @@
       <Rectangle arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="512.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="520.0" />
       <VBox alignment="CENTER" spacing="30.0">
          <children>
-            <Label fx:id="lblOverzicht" alignment="CENTER" text="Overzicht Spelers" textFill="WHITE">
+            <Label fx:id="lblOverzicht" alignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="GothicI" size="47.0" />
                </font>
@@ -31,7 +31,7 @@
                </effect>
             </Label>
             <TextArea fx:id="txaSpelers" maxWidth="-Infinity" prefHeight="254.0" prefWidth="400.0" />
-            <Button fx:id="btnTerug" mnemonicParsing="false" onAction="#btnTerugClicked" prefHeight="25.0" prefWidth="62.0" text="Terug" />
+            <Button fx:id="btnTerug" mnemonicParsing="false" onAction="#btnTerugClicked" prefHeight="25.0" prefWidth="62.0" />
          </children>
          <padding>
             <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
