--- a/src/gui/Start.fxml
+++ b/src/gui/Start.fxml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -19,7 +24,7 @@
          </image>
       </ImageView>
       <Rectangle fx:id="kader" arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="525.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="541.0" />
-      <VBox alignment="CENTER" spacing="30.0">
+      <VBox alignment="CENTER" prefWidth="612.0" spacing="30.0">
          <children>
             <Text fx:id="titelSpel" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Splendor" textAlignment="CENTER" wrappingWidth="446.19054412841797">
                <font>
@@ -29,21 +34,49 @@
                   <DropShadow />
                </effect>
             </Text>
-            <HBox alignment="CENTER" spacing="30.0">
+            <Button fx:id="btnSpelen" blendMode="SCREEN" disable="true" focusTraversable="false" mnemonicParsing="false" onAction="#btnSpelenClicked" prefHeight="55.0" prefWidth="233.0">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Button>
+            <MenuButton fx:id="MBTaal" alignment="TOP_LEFT" mnemonicParsing="false" opacity="0.8" text="Taal">
+              <items>
+                <MenuItem fx:id="MI_nl" mnemonicParsing="false" onAction="#MI_nl_action" text="Nederlands" />
+                <MenuItem fx:id="MI_en" mnemonicParsing="false" onAction="#MI_en_action" text="English" />
+              </items>
+            </MenuButton>
+            <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="612.0">
                <children>
-                  <Button fx:id="btnSpelen" blendMode="SCREEN" focusTraversable="false" mnemonicParsing="false" onAction="#btnSpelenClicked" prefHeight="55.0" prefWidth="233.0" text="Spelen">
-                     <font>
-                        <Font size="30.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnPlay" blendMode="SCREEN" focusTraversable="false" mnemonicParsing="false" onAction="#btnPlayClicked" prefHeight="55.0" prefWidth="233.0" text="Play">
-                     <font>
-                        <Font size="30.0" />
-                     </font>
-                  </Button>
+                  <Label fx:id="LblVolume" text="70 %" textFill="WHITE">
+                     <padding>
+                        <Insets bottom="12.0" right="3.0" />
+                     </padding>
+                  </Label>
+                  <Slider fx:id="SLVolume" maxWidth="150.0" onDragDetected="#SLVolumeDrag" opacity="0.7" value="70.0">
+                     <padding>
+                        <Insets bottom="15.0" />
+                     </padding>
+                  </Slider>
+                  <ImageView fx:id="volumeImages" fitHeight="35.0" fitWidth="50.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/luid.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets bottom="5.0" />
+                     </HBox.margin>
+                  </ImageView>
                </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </HBox>
          </children>
+         <StackPane.margin>
+            <Insets top="80.0" />
+         </StackPane.margin>
       </VBox>
    </children>
 </fx:root>
